# flask-vitals

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  workflow.yml
src/flask_vitals/: __init__.py  blueprint.py
tests/: test_vitals.py
